--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <link rel="shortcut icon" href="image/elektroWhite2.svg" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initialscale=1">
+    <!-- Google Icon -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style/style.css">
@@ -129,7 +131,7 @@
         </div>
         <!-- Contact Us -->
         <div class="d-flex flex-wrap m-5 text-center justify-content-center">
-            <div class="card text-white m-3 col-lg-2 col-10">
+            <div class="card m-3 col-lg-2 col-10">
                 <div class="card-body">
                     <center>
                         <div class="contact-card-icon shadow-1-strong m-3 mt-0">
@@ -144,7 +146,7 @@
                     <p class="card-text">(266) 855-0710</p>
                 </div>
             </div>
-            <div class="card text-white m-3 col-lg-2 col-10">
+            <div class="card m-3 col-lg-2 col-10">
                 <div class="card-body">
                     <center>
                         <div class="contact-card-icon shadow-1-strong m-3 mt-0">
@@ -160,7 +162,7 @@
                     <p class="card-text">Elekro@email.com</p>
                 </div>
             </div>
-            <div class="card text-white m-3 col-lg-2 col-10">
+            <div class="card m-3 col-lg-2 col-10">
                 <div class="card-body">
                     <center>
                         <div class="contact-card-icon shadow-1-strong m-3 mt-0">
@@ -176,7 +178,7 @@
                     <p class="card-text">@Elektro.id</p>
                 </div>
             </div>
-            <div class="card text-white m-3 col-lg-2 col-10">
+            <div class="card m-3 col-lg-2 col-10">
                 <div class="card-body">
                     <center>
                         <div class="contact-card-icon shadow-1-strong m-3 mt-0">
@@ -203,16 +205,16 @@
                 <h5 class="mt-3 mb-3 fw-bold">Costumer Links</h5>
                 <ul>
                     <li>
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="footer-link" href="index.html">Home</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="vehicle.html">Vehicle</a>
+                        <a class="footer-link" href="vehicle.html">Vehicle</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="footer-link" href="about.html">About</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="footer-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
