--- a/index.html
+++ b/index.html
@@ -136,16 +136,16 @@
                 <h5 class="mt-3 mb-3 fw-bold">Costumer Links</h5>
                 <ul>
                     <li>
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="footer-link" href="index.html">Home</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="vehicle.html">Vehicle</a>
+                        <a class="footer-link" href="vehicle.html">Vehicle</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="footer-link" href="about.html">About</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="footer-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
