--- a/vehicle.html
+++ b/vehicle.html
@@ -55,7 +55,7 @@
             <div class="d-flex flex-wrap justify-content-md-start justify-content-center text-white">
                 <!-- <div class="row text-white"> -->
                 <div class="m-3 col-lg-3 col-md-3 col-11 bg-image hover-overlay">
-                    <div class="card vehicle " type="button" data-bs-toggle="modal" data-bs-target="#modal_x">
+                    <div class="card vehicle" type="button" data-bs-toggle="modal" data-bs-target="#modal_x">
                         <img src="image/modelx/modelx black.png" class="card-vehicle" alt="...">
                         <hr class="m-0">
                         <div class="card-body">
@@ -347,16 +347,16 @@
                 <h5 class="mt-3 mb-3 fw-bold">Costumer Links</h5>
                 <ul>
                     <li>
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="footer-link" href="index.html">Home</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="vehicle.html">Vehicle</a>
+                        <a class="footer-link" href="vehicle.html">Vehicle</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="footer-link" href="about.html">About</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="footer-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
